resources/constraint_templates/block_snippet_annotations.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sblocksnippetannotations
  annotations:
    metadata.gatekeeper.sh/title: "Block forbidden ingress annotations"
    description: >-
      Blocks CREATE and UPDATE operations on Ingress resources that use
      annotations not supported by Cloud Platform.
spec:
  crd:
    spec:
      names:
        kind: k8sblocksnippetannotations
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sblocksnippetannotations

        operations := {"CREATE", "UPDATE"}

        blocked_annotations := {
          "nginx.ingress.kubernetes.io/stream-snippet",
          "nginx.ingress.kubernetes.io/auth-snippet",
          "nginx.ingress.kubernetes.io/server-alias",
          "nginx.ingress.kubernetes.io/auth-secret-type",
          "nginx.ingress.kubernetes.io/canary-by-header",
          "nginx.ingress.kubernetes.io/canary-by-header-pattern",
          "nginx.ingress.kubernetes.io/canary-by-header-value",
          "nginx.ingress.kubernetes.io/canary-weight-total",
          "nginx.ingress.kubernetes.io/auth-tls-error-page",
          "nginx.ingress.kubernetes.io/auth-tls-match-cn",
          "nginx.ingress.kubernetes.io/connection-proxy-header",
          "nginx.ingress.kubernetes.io/cors-allow-credentials",
          "nginx.ingress.kubernetes.io/cors-allow-headers",
          "nginx.ingress.kubernetes.io/cors-allow-methods",
          "nginx.ingress.kubernetes.io/cors-allow-origin",
          "nginx.ingress.kubernetes.io/cors-expose-headers",
          "nginx.ingress.kubernetes.io/cors-max-age",
          "nginx.ingress.kubernetes.io/enable-cors",
          "nginx.ingress.kubernetes.io/custom-headers",
          "nginx.ingress.kubernetes.io/denylist-source-range",
          "nginx.ingress.kubernetes.io/disable-proxy-intercept-errors",
          "nginx.ingress.kubernetes.io/enable-global-auth",
          "nginx.ingress.kubernetes.io/auth-always-set-cookie",
          "nginx.ingress.kubernetes.io/auth-cache-duration",
          "nginx.ingress.kubernetes.io/auth-cache-key",
          "nginx.ingress.kubernetes.io/auth-keepalive",
          "nginx.ingress.kubernetes.io/auth-keepalive-requests",
          "nginx.ingress.kubernetes.io/auth-keepalive-share-vars",
          "nginx.ingress.kubernetes.io/auth-keepalive-timeout",
          "nginx.ingress.kubernetes.io/auth-method",
          "nginx.ingress.kubernetes.io/auth-proxy-set-headers",
          "nginx.ingress.kubernetes.io/auth-request-redirect",
          "nginx.ingress.kubernetes.io/auth-response-headers",
          "nginx.ingress.kubernetes.io/auth-signin",
          "nginx.ingress.kubernetes.io/auth-signin-redirect-param",
          "nginx.ingress.kubernetes.io/auth-url",
          "nginx.ingress.kubernetes.io/fastcgi-index",
          "nginx.ingress.kubernetes.io/fastcgi-params-configmap",
          "nginx.ingress.kubernetes.io/http2-push-preload",
          "nginx.ingress.kubernetes.io/enable-access-log",
          "nginx.ingress.kubernetes.io/enable-rewrite-log",
          "nginx.ingress.kubernetes.io/mirror-host",
          "nginx.ingress.kubernetes.io/mirror-request-body",
          "nginx.ingress.kubernetes.io/mirror-target",
          "nginx.ingress.kubernetes.io/enable-opentelemetry",
          "nginx.ingress.kubernetes.io/opentelemetry-operation-name",
          "nginx.ingress.kubernetes.io/opentelemetry-trust-incoming-span",
          "nginx.ingress.kubernetes.io/proxy-buffer-size",
          "nginx.ingress.kubernetes.io/proxy-buffering",
          "nginx.ingress.kubernetes.io/proxy-buffers-number",
          "nginx.ingress.kubernetes.io/proxy-busy-buffers-size",
          "nginx.ingress.kubernetes.io/proxy-cookie-domain",
          "nginx.ingress.kubernetes.io/proxy-cookie-path",
          "nginx.ingress.kubernetes.io/proxy-http-version",
          "nginx.ingress.kubernetes.io/proxy-next-upstream",
          "nginx.ingress.kubernetes.io/proxy-next-upstream-timeout",
          "nginx.ingress.kubernetes.io/proxy-next-upstream-tries",
          "nginx.ingress.kubernetes.io/proxy-redirect-from",
          "nginx.ingress.kubernetes.io/proxy-redirect-to",
          "nginx.ingress.kubernetes.io/proxy-request-buffering",
          "nginx.ingress.kubernetes.io/proxy-ssl-ciphers",
          "nginx.ingress.kubernetes.io/proxy-ssl-name",
          "nginx.ingress.kubernetes.io/proxy-ssl-protocols",
          "nginx.ingress.kubernetes.io/proxy-ssl-secret",
          "nginx.ingress.kubernetes.io/proxy-ssl-server-name",
          "nginx.ingress.kubernetes.io/proxy-ssl-verify",
          "nginx.ingress.kubernetes.io/proxy-ssl-verify-depth",
          "nginx.ingress.kubernetes.io/limit-allowlist",
          "nginx.ingress.kubernetes.io/limit-burst-multiplier",
          "nginx.ingress.kubernetes.io/limit-connections",
          "nginx.ingress.kubernetes.io/limit-rate",
          "nginx.ingress.kubernetes.io/limit-rate-after",
          "nginx.ingress.kubernetes.io/from-to-www-redirect",
          "nginx.ingress.kubernetes.io/permanent-redirect-code",
          "nginx.ingress.kubernetes.io/relative-redirects",
          "nginx.ingress.kubernetes.io/temporal-redirect-code",
          "nginx.ingress.kubernetes.io/app-root",
          "nginx.ingress.kubernetes.io/preserve-trailing-slash",
          "nginx.ingress.kubernetes.io/ssl-prefer-server-ciphers",
          "nginx.ingress.kubernetes.io/ssl-passthrough",
          "nginx.ingress.kubernetes.io/satisfy",
          "nginx.ingress.kubernetes.io/service-upstream",
          "nginx.ingress.kubernetes.io/session-cookie-change-on-failure",
          "nginx.ingress.kubernetes.io/session-cookie-conditional-samesite-none",
          "nginx.ingress.kubernetes.io/session-cookie-domain",
          "nginx.ingress.kubernetes.io/upstream-hash-by",
          "nginx.ingress.kubernetes.io/upstream-hash-by-subset",
          "nginx.ingress.kubernetes.io/upstream-hash-by-subset-size",
          "nginx.ingress.kubernetes.io/use-port-in-redirects",
          "nginx.ingress.kubernetes.io/x-forwarded-prefix",
        }

        violation[{"msg": msg}] {
          input.review.kind.kind == "Ingress"
          operations[input.review.operation]
          some key
          blocked_annotations[key]
          input.review.object.metadata.annotations[key]
          msg := sprintf(
            "Ingress '%s/%s' uses the '%s' annotation which is blocked due to its annotations risk. Please raise any queries in #ask-cloud-platform.",
            [input.review.object.metadata.namespace, input.review.object.metadata.name, key]
          )
        }
