resources/constraint_templates/ingress_beta_class_domain.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8singressbetaclassdomain
spec:
  crd:
    spec:
      names:
        kind: k8singressbetaclassdomain
      validation:
        openAPIV3Schema:
          type: object
          properties:
            validBetaDomains:
              type: array
              items:
                type: string
  targets:
      - target: admission.k8s.gatekeeper.sh
        rego: |
          package k8singressbetaclassdomain

          valid_beta_domain {
            pattern := input.parameters.validBetaDomains[_]
            host := input.review.object.spec.rules[0].host
            glob.match(pattern, [], host)
          }

          violation[{"msg": msg}] {
            input.review.kind.kind == "Ingress"
            input.review.object.spec.ingressClassName == "beta"
            not valid_beta_domain
            host := input.review.object.spec.rules[0].host
            msg := sprintf("Ingress with ingressClassName '%v' must use domain matching one of %v. Found domain: %v", [input.review.object.spec.ingressClassName, input.parameters.validBetaDomains, host])
          }
