resources/constraint_templates/ingress_external_dns_identifier.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sexternaldnsidentifier
  annotations:
    metadata.gatekeeper.sh/title: External DNS Identifier
    description: This constraint checks that the set-identifier annotation follows the pattern <ingress-name>-<ns>-<cluster-colour>
spec:
  crd:
    spec:
      names:
        kind: k8sexternaldnsidentifier
      validation:
        openAPIV3Schema:
          type: object
          properties:
            clusterColor:
              type: string

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sexternaldnsidentifier

        violation[{"msg": msg}] {
          input.review.kind.kind == "Ingress"
            not startswith(input.review.object.metadata.name, "cm-acme-http-solver")
            not input.review.object.metadata.annotations["external-dns.alpha.kubernetes.io/set-identifier"] == concat("-", [input.review.object.metadata.name, input.review.object.metadata.namespace, input.parameters.clusterColor])
            not input.review.object.metadata.annotations["cloud-platform.justice.gov.uk/ignore-external-dns-weight"] == "true"
            msg := sprintf("\nPlease add valid external-dns set-identifier annotation for ingress %v/%v, remember: <ingress-name>-<ns>-${clusterColor}", [input.review.object.metadata.namespace, input.review.object.metadata.name])
          }
