resources/constraint_templates/ingress_external_dns_weight.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sexternaldnsweight
  annotations:
    metadata.gatekeeper.sh/title: External DNS weight
    description: This constraint checks that the aws-weight annotation is present
spec:
  crd:
    spec:
      names:
        kind: k8sexternaldnsweight

  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sexternaldnsweight

        violation[{"msg": msg}] {
          input.review.kind.kind == "Ingress"
          not input.review.object.metadata.annotations["external-dns.alpha.kubernetes.io/aws-weight"]
          not input.review.object.metadata.annotations["cloud-platform.justice.gov.uk/ignore-external-dns-weight"] == "true"
          msg := "\nPlease add valid AWS weight annotation e.g. external-dns.alpha.kubernetes.io/aws-weight: '100'"
        }
