resources/constraint_templates/service_type.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8sservicetypeloadbalancer
  annotations:
    description: Requires all Services with spec.type == "LoadBalancer" to have the correct annotation in the associated namespace
spec:
  crd:
    spec:
      names:
        kind: k8sservicetypeloadbalancer
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8sservicetypeloadbalancer

        violation[{"msg": msg}] {
          input.review.kind.kind == "Service"
          input.review.object.spec.type == "LoadBalancer"
          not data.inventory.cluster["v1"].Namespace[input.review.object.metadata.namespace].metadata.annotations["cloud-platform.justice.gov.uk/can-use-loadbalancer-services"]

          msg := sprintf("Service %v/%v is of type LoadBalancer and is not allowed. Please get in touch with us in #ask-cloud-platform", [input.review.object.metadata.namespace, input.review.object.metadata.name])
        }
