resources/constraints/block_snippet_annotations.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: k8sblocksnippetannotations
metadata:
  name: k8sblocksnippetannotations
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["Ingress"]
