resources/constraints/ingress_external_dns_identifier.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: k8sexternaldnsidentifier
metadata:
  name: k8sexternaldnsidentifier
spec:
  match:
    kinds:
      - kinds: ["Ingress"]
        apiGroups: ["extensions", "networking.k8s.io"]
  parameters:
    clusterColor: black
