resources/constraints/ingress_valid_classname.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: k8singressclassname
metadata:
  name: k8singressclassname
spec:
  match:
    kinds:
      - kinds: ["Ingress"]
        apiGroups: ["networking.k8s.io"]
