resources/constraints/service_type.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: k8sservicetypeloadbalancer
metadata:
  name: k8sservicetypeloadbalancer
spec:
  match:
    excludedNamespaces: ["gateway-api"]
    kinds:
      - kinds: ["Service"]
