test/suite/samples/block_snippet_annotations/allow_other_snippet/case.yaml
kind: AdmissionReview
apiVersion: admission.k8s.io/v1beta1
request:
  kind:
    group: networking.k8s.io
    version: v1
    kind: Ingress
  operation: "CREATE"
  name: ing-0
  namespace: my-namespace
  object:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: ing-0
      namespace: my-namespace
      annotations:
        external-dns.alpha.kubernetes.io/aws-weight: "100"
        nginx.ingress.kubernetes.io/configuration-snippet: |
          more_set_headers "X-Frame-Options: DENY";
    spec:
      ingressClassName: modsec
      rules:
        - host: ing-0.example.com
          http:
            paths:
            - backend:
                service:
                  name: helloworld
                  port:
                    name: http
              pathType: ImplementationSpecific
