test/suite/samples/external_dns_identifier/allow_cert_manager/case.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cm-acme-http-solver-12345
  namespace: default
spec:
  rules:
  - host: ingress.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
