test/suite/samples/ingress_beta_class_domain/allow_non_beta_class/case.yaml
kind: AdmissionReview
apiVersion: admission.k8s.io/v1beta1
request:
  kind:
    group: networking.k8s.io
    version: v1
    kind: Ingress

  operation: "CREATE"

  name: ing-nginx-allow

  namespace: default

  object:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: ing-nginx-allow
      namespace: default
    spec:
      ingressClassName: nginx
      rules:
      - host: my-app.apps.live.cloud-platform.service.justice.gov.uk
        http:
          paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
