test/suite/samples/ingress_valid_classname/allow_delete_invalid_class/case.yaml
kind: AdmissionReview
apiVersion: admission.k8s.io/v1beta1
request:
  kind:
    group: networking.k8s.io
    version: v1
    kind: Ingress
  operation: "DELETE"
  name: ing-invalid
  namespace: default-0
  oldObject:
    apiVersion: networking.k8s.io/v1
    kind: Ingress
    metadata:
      name: ing-invalid
      namespace: default-0
    spec:
      ingressClassName: fake-class
      rules:
      - host: ing-0.example.com
        http:
          paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: nginx
                port:
                  number: 80
  object: null
