test/suite/samples/ingress_valid_classname/deny_class_not_on_cluster/inventory.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: default
spec:
  controller: k8s.io/ingress-nginx
---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: modsec
spec:
  controller: k8s.io/ingress-nginx
