test/suite/samples/ns_requires_psa_label/allow_valid_label/case.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: allowed-namespace
  labels:
    pod-security.kubernetes.io/audit: restricted
