test/suite/samples/pod_memory_ratio/allow_ratio_equal_2/case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allow-ratio-equal-2
spec:
  containers:
  - name: app
    image: nginx
    resources:
      requests:
        memory: 512Mi
      limits:
        memory: 1024Mi
