test/suite/samples/pod_memory_ratio/deny-bad-container/case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: deny-bad-container
spec:
  containers:
  - name: good
    image: nginx
    resources:
      requests:
        memory: 256Mi
      limits:
        memory: 512Mi
  - name: bad
    image: nginx
    resources:
      requests:
        memory: 256Mi
      limits:
        memory: 1024Mi
