test/suite/samples/pod_memory_ratio/deny_ratio_greater_than_2/case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: deny-ratio-greater-than-2
spec:
  containers:
  - name: app
    image: nginx
    resources:
      requests:
        memory: 512Mi
      limits:
        memory: 2Gi
