test/suite/samples/pod_toleration/allow_annotation/case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-0
  namespace: starter-pack-0
spec:
  tolerations:
    key: "foo"
