test/suite/samples/pod_toleration/allow_master_node/case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-0
  namespace: starter-pack-0
spec:
  tolerations:
    key: "node-role.kubernetes.io/master"
