test/suite/samples/pod_toleration/allow_pod_no_tolerations/case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-0
  namespace: starter-pack-0
