test/suite/samples/pod_toleration/deny_invalid_key/case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-0
  namespace: starter-pack-0
spec:
  tolerations:
    key: false
